--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ apply plugin: "java"
 group 'com.maaya'
 version '1.0.0'
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
+
 dependencies {
     implementation 'com.microsoft.azure.functions:azure-functions-java-library:3.1.0'
     implementation 'com.azure:azure-ai-openai:1.0.0-beta.11'
